--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Portfolio</title>
+    <link rel="stylesheet" href="Style/portfolio.css">
 </head>
-<body>
+<body class="all">
     <header>
+        <nav>
+            <h3>LOGO</h3>
+            <button>Sign Up</button>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3>Cool Dark UI Template for <br> Web Agencies!</h3>
+                <button>Stay Focused</button>
+            </div>
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
