--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style/portfolio.css">
 </head>
 <body class="all">
     <header>
         <nav>
             <h3>LOGO</h3>
-            <button>Sign Up</button>
+            <button class="button-primary">Sign Up</button>
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3>Cool Dark UI Template for <br> Web Agencies!</h3>
-                <button>Stay Focused</button>
+                <h3 class="banner-text">Cool Dark UI Template for <br> Web Agencies!</h3>
+                <button class="button-primary">Stay Focused</button>
             </div>
         </div>
 
