--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <h3 class="heading-4">What our users say</h3>
             <div class="cards">
                 <div class="info">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
                     <h4>Loved by Designers</h4>
                  <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
                  <div class="reviewer pt20">
@@ -78,15 +78,15 @@
                  </div>
             </div>
                 <div class="info">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
                     <h4>Loved by Designers</h4>
                  <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
                  <div class="reviewer pt20">
-                    <div class="pr10"><img   src="/Assets/avatar.png" alt=""></div>
+                    <div class="pr10"><img   src="Assets/avatar.png" alt=""></div>
                     <div class="">
                         <p class="grey bold">Reviewer name</p>
                         <p class="text-tertiary pt10">Date</p>
@@ -94,15 +94,15 @@
                  </div>
             </div>
                 <div class="info">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
-                    <img src="/Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
                     <h4>Loved by Designers</h4>
                  <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
                  <div class="reviewer pt20">
-                    <div class="pr10"><img   src="/Assets/avatar.png" alt=""></div>
+                    <div class="pr10"><img   src="Assets/avatar.png" alt=""></div>
                     <div class="">
                         <p class="grey bold">Reviewer name</p>
                         <p class="text-tertiary pt10">Date</p>
@@ -118,7 +118,7 @@
             <p class="p10">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="button-primary">Ger Started Free</button>
             <br>
-            <img class="img-3 pt-20" src="/Assets/wc-big.png" alt="">
+            <img class="img-3 pt-20" src="Assets/wc-big.png" alt="">
         </section>
         
 
