--- a/index.html
+++ b/index.html
@@ -120,7 +120,17 @@
             <br>
             <img class="img-3 pt-20" src="Assets/wc-big.png" alt="">
         </section>
-        
+        <section class="section-5">
+            <div><h3 class="font-1">Let’s Get in<br>Touch</h3></div>
+            <div class="font-2">
+                <label for="Email">Email</label><br>
+                <input type="email" name="Email" id=""><br>
+                <label for="Name">Name</label><br>
+                <input type="text" name="Name" id=""><br>
+                <label for="message">Message</label><br>
+                <input type="text" name="" id="">
+            </div>
+        </section>
 
     </main>
     <footer>
