--- a/index.html
+++ b/index.html
@@ -122,13 +122,14 @@
         </section>
         <section class="section-5">
             <div><h3 class="font-1">Let’s Get in<br>Touch</h3></div>
-            <div class="font-2">
+            <div class="input font-2">
                 <label for="Email">Email</label><br>
-                <input type="email" name="Email" id=""><br>
+                <input type="email" name="Email" id="" placeholder="example@email.com"><br>
                 <label for="Name">Name</label><br>
-                <input type="text" name="Name" id=""><br>
+                <input type="text" name="Name" id="" placeholder="full name"><br>
                 <label for="message">Message</label><br>
-                <input type="text" name="" id="">
+                <input type="text" name="" id="" placeholder="write your message....">
+                <button class="button-primary">Get in Touch</button>
             </div>
         </section>
 
