--- a/index.html
+++ b/index.html
@@ -121,14 +121,15 @@
             <img class="img-3 pt-20" src="Assets/wc-big.png" alt="">
         </section>
         <section class="section-5">
-            <div><h3 class="font-1">Let’s Get in<br>Touch</h3></div>
+            <h3 class="font-1">Let’s Get in<br>Touch</h3>
             <div class="input font-2">
-                <label for="Email">Email</label><br>
+                <label class="label" for="Email">Email</label><br>
                 <input type="email" name="Email" id="" placeholder="example@email.com"><br>
-                <label for="Name">Name</label><br>
+                <label class="label" for="Name">Name</label><br>
                 <input type="text" name="Name" id="" placeholder="full name"><br>
-                <label for="message">Message</label><br>
+                <label class="label" for="message">Message</label><br>
                 <input type="text" name="" id="" placeholder="write your message....">
+                <br>
                 <button class="button-primary">Get in Touch</button>
             </div>
         </section>
