problem solved i guess

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h4>Loved by Designers</h4>
                  <p>This template instantly leveled up our<br> presence.” – Studio Vertex</p>
                  <div class="reviewer pt20">
-                    <div class="pr10"><img   src="/Assets/avatar.png" alt=""></div>
+                    <div class="pr10"><img   src="Assets/avatar.png" alt=""></div>
                     <div class="">
                         <p class="grey bold">Reviewer name</p>
                         <p class="text-tertiary pt10">Date</p>
