--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             <p class="p10">This template instantly leveled up our presence.” – Studio Vertex</p>
             <button class="button-primary">Ger Started Free</button>
             <br>
-            <img class="img-3 pt-20" src="Assets/wc-big.png" alt="">
+
+            <img class="img-3 mt20" src="Assets/wc-big.png" alt="">
         </section>
         <section class="section-5">
             <h3 class="font-1">Let’s Get in<br>Touch</h3>
