--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body class="all">
     <header>
         <nav>
-            <h3>LOGO</h3>
+            <a href=""><h3>LOGO</h3></a>
             <a href=""><button class="button-primary">Sign Up</button></a>
             
         </nav>
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-text">Cool Dark UI Template for <br> Web Agencies!</h3>
-                <button class="button-primary btn-2">Stay Focused</button>
+                <a href=""><button class="button-primary btn-2">Stay Focused</button></a>
             </div>
         </div>
 
@@ -116,7 +116,8 @@
         <section class="section-4 font-1">
             <h3>Ready to focus better</h3>
             <p class="p10">This template instantly leveled up our presence.” – Studio Vertex</p>
-            <button class="button-primary">Ger Started Free</button>
+            <a href=""><button class="button-primary">Get Started Free</button></a>
+            
             <br>
 
             <img class="img-3 mt20" src="Assets/wc-big.png" alt="">
@@ -129,9 +130,9 @@
                 <label class="label" for="Name">Name</label><br>
                 <input type="text" name="Name" id="" placeholder="full name"><br>
                 <label class="label" for="message">Message</label><br>
-                <input type="text" name="" id="" placeholder="write your message....">
+                <input type="text" name="" id="textbox" placeholder="write your message....">
                 <br>
-                <button class="button-primary">Get in Touch</button>
+                <a href=""><button class="button-primary">Get in Touch</button></a>
             </div>
         </section>
 
@@ -143,10 +144,10 @@
             discover how we can bring your vision to life.</p>
         <div class="fnav">
             <ul class="font-1">
-                <li>Home</li>
-                <li>About</li>
-                <li>How it Works</li>
-                <li>Services</li>
+                <a href=""><li>Home</li></a>
+                <a href=""><li>About</li></a>
+                <a href=""><li>How it Works</li></a>
+                <a href=""><li>Services</li></a>
             </ul>
         </div>
     </footer>
