--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="see-it">
                 <h3 class="text-1">See It in Action</h3>
                 <p class="text-2">Explore the live preview and imagine your<br>brand in this bold new look.</p>
-                <button class="button-primary">Launch Live Preview</button>
+                <a href=""><button class="button-primary">Launch Live Preview</button></a>
             </div>
             <div class="image">
                 
@@ -138,7 +138,7 @@
 
     </main>
     <footer>
-        <h3 class="font-2">LOGO</h3>
+        <a href=""><h3 class="font-2">LOGO</h3></a>
         <p class="font-1">Ready to elevate your online presence? 
             Contact us today to discuss<br>your project and 
             discover how we can bring your vision to life.</p>
